--- a/DataSDI/Add-On-View/PratinjauFoto/PratinjauFoto.storyboard
+++ b/DataSDI/Add-On-View/PratinjauFoto/PratinjauFoto.storyboard
@@ -25,14 +25,19 @@
                                             <rect key="frame" x="0.0" y="0.0" width="290" height="213"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yOy-jr-vmf" customClass="XSDragImageView" customModule="DataSDI" customModuleProvider="target">
-                                                    <rect key="frame" x="-8" y="-7" width="305" height="228"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yOy-jr-vmf" customClass="XSDragImageView" customModule="DataSDI" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="305" height="228"/>
                                                     <imageCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" continuous="YES" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="image" id="Xec-vV-bfJ"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="yOy-jr-vmf" firstAttribute="centerY" secondItem="SRM-4o-5nb" secondAttribute="centerY" id="DfP-kw-W5x"/>
+                                        <constraint firstItem="yOy-jr-vmf" firstAttribute="height" secondItem="SRM-4o-5nb" secondAttribute="height" id="Uxg-Yu-n8g"/>
+                                        <constraint firstItem="yOy-jr-vmf" firstAttribute="width" secondItem="SRM-4o-5nb" secondAttribute="width" id="evT-2J-deg"/>
+                                        <constraint firstItem="yOy-jr-vmf" firstAttribute="centerX" secondItem="SRM-4o-5nb" secondAttribute="centerX" id="uOR-HT-BjE"/>
+                                    </constraints>
                                 </clipView>
                                 <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="aPV-Pf-ujn">
                                     <rect key="frame" x="0.0" y="212" width="305" height="16"/>
@@ -66,7 +71,7 @@ Gw
                                             <stackView distribution="fillEqually" orientation="horizontal" alignment="centerY" spacing="4" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eog-JE-UbQ">
                                                 <rect key="frame" x="5" y="5" width="83" height="19"/>
                                                 <subviews>
-                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KAo-HF-aru">
+                                                    <button toolTip="Perkecil gambar | ⌘-" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KAo-HF-aru">
                                                         <rect key="frame" x="0.0" y="0.0" width="25" height="19"/>
                                                         <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" imagePosition="overlaps" alignment="center" controlSize="large" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="h7m-uU-LK0">
                                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -77,7 +82,7 @@ Gw
                                                             <action selector="decreaseSize:" target="FJS-Tf-3Zp" id="Q3f-Dp-BRm"/>
                                                         </connections>
                                                     </button>
-                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DgO-V0-2q2">
+                                                    <button toolTip="Perbesar gambar | ⌘+" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DgO-V0-2q2">
                                                         <rect key="frame" x="29" y="0.0" width="25" height="19"/>
                                                         <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" imagePosition="overlaps" alignment="center" controlSize="large" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="d5K-uY-MSP">
                                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -98,12 +103,12 @@ Gw
                                                                     <menuItem state="on" hidden="YES" id="qgw-3e-Inm">
                                                                         <imageReference key="image" image="ellipsis.circle.fill" catalog="system" symbolScale="large"/>
                                                                     </menuItem>
-                                                                    <menuItem title="Perbarui..." id="zCZ-2c-IWe">
+                                                                    <menuItem title="Pilih File..." id="zCZ-2c-IWe">
                                                                         <connections>
                                                                             <action selector="editFoto:" target="FJS-Tf-3Zp" id="bR7-rS-FRa"/>
                                                                         </connections>
                                                                     </menuItem>
-                                                                    <menuItem title="Simpan ke database" id="O8b-G9-zxQ">
+                                                                    <menuItem title="Simpan ke Database" id="O8b-G9-zxQ">
                                                                         <connections>
                                                                             <action selector="simpanFoto:" target="FJS-Tf-3Zp" id="UNf-h9-3Ve"/>
                                                                         </connections>
@@ -115,7 +120,7 @@ Gw
                                                                         </connections>
                                                                     </menuItem>
                                                                     <menuItem isSeparatorItem="YES" id="QAM-bo-ufn"/>
-                                                                    <menuItem title="Bagikan..." id="Vml-FV-6ik">
+                                                                    <menuItem title="Simpan ke File..." id="Vml-FV-6ik">
                                                                         <connections>
                                                                             <action selector="simpankeFolder:" target="FJS-Tf-3Zp" id="NGn-Wf-E0l"/>
                                                                         </connections>
@@ -203,8 +208,10 @@ Gw
                     </view>
                     <connections>
                         <outlet property="imageView" destination="yOy-jr-vmf" id="BD8-CV-lya"/>
+                        <outlet property="pilihFileMenuItem" destination="zCZ-2c-IWe" id="Lbp-44-qTW"/>
                         <outlet property="scrollView" destination="dZ6-gp-dT4" id="PCA-JR-llv"/>
                         <outlet property="shareMenu" destination="ER7-tc-csu" id="uef-y4-DQU"/>
+                        <outlet property="simpanFotoMenuItem" destination="O8b-G9-zxQ" id="czK-9Q-DSg"/>
                         <outlet property="stackView" destination="eog-JE-UbQ" id="a3F-aD-fFz"/>
                         <outlet property="visualEffect" destination="Db9-yc-5ot" id="1Hc-5l-WIy"/>
                         <outlet property="visualEffectShare" destination="lPy-5F-BtA" id="Fbx-NM-Hp9"/>
